--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -1,4 +1,4 @@
-{{> /layout/header}}
+{{> layout/header}}
 
 <div class="container p-5">
 
@@ -8,10 +8,13 @@
     <div class="card">
         <div class="card-header"><b>회원가입을 해주세요</b></div>
         <div class="card-body">
-            <form action="/join" method="post" enctype="application/x-www-form-urlencoded">
+            <form action="/join" method="post" onsubmit="return valid()">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username">
+                    <input id="username" type="text" class="form-control" placeholder="Enter username" name="username">
+                    <div id="errorId">아이디가 중복되었습니다</div>
+                    <!-- <button type="button" onclick="usernameSameCheck()" class="btn btn-primary">아이디중복체크</button>-->
                 </div>
+
                 <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Enter password" name="password">
                 </div>
@@ -24,4 +27,68 @@
     </div>
 </div>
 
-{{> /layout/footer}}
+<script>
+    let isSameCheck = false;
+    let errorId = $("#errorId");
+    function valid(){
+        if(isSameCheck == false){
+            alert("아이디 중복체크를 해야 합니다");
+        }
+        return isSameCheck;
+    }
+
+    $("#username").on("keyup",function (){
+        var username = $(this).val();
+        // console.log("입력 값: ", inputValue);
+
+        $.ajax({
+            url: "/api/username-same-check?username="+username,
+            type: "get"
+        }).done((res)=>{
+            console.log(res);
+            console.log("통신완료");
+            if(res.body == false){
+                isSameCheck = false;
+
+            }else{
+                isSameCheck = true;
+
+            }
+        }).fail((res)=>{
+            alert(res.responseJSON.msg);
+        });
+
+        if (isSameCheck == false){
+            errorId.css('color','red');
+            errorId.html("<div>아이디가 중복되었습니다.</div>");
+        }else{
+            errorId.css('color','blue');
+            errorId.html("<div>아이디 중복체크가 확인되었습니다.</div>");
+        }
+
+    })
+
+    //
+    // function usernameSameCheck(){
+    //     let username = $("#username").val();
+    //
+    //     $.ajax({
+    //         url: "/api/username-same-check?username="+username,
+    //         type: "get"
+    //     }).done((res)=>{
+    //         console.log(res);
+    //         console.log("통신완료");
+    //         if(res.body == false){
+    //             isSameCheck = false;
+    //
+    //         }else{
+    //             isSameCheck = true;
+    //
+    //         }
+    //     }).fail((res)=>{
+    //         alert(res.responseJSON.msg);
+    //     });
+    //}
+</script>
+
+{{> layout/footer}}
